@@ -13518,7 +13518,6 @@ force_decl_die (tree decl)
 	  DECL_EXTERNAL (decl) = saved_external_flag;
 	  break;
 
-	case TYPE_DECL:
 	case NAMESPACE_DECL:
 	  dwarf2out_decl (decl);
 	  break;
@@ -15160,10 +15159,10 @@ lto_typedecl_ref (tree decl, lto_out_ref *ref)
 
   gcc_assert (TREE_CODE (decl) == TYPE_DECL);
 
-  /* Generate the DIE for DECL.  */
-  die = force_decl_die (decl);
-  /* Construct the reference.  */
-  lto_init_ref (ref, die, DECL_CONTEXT (decl));
+  /* These should be nameless decls generated by the front-end for local typedefs.  */
+  gcc_assert (!DECL_NAME (decl));
+  /* Just use the reference to TREE_TYPE.  */
+  lto_type_ref (TREE_TYPE (decl), ref);
 }
 
 #else
